--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       - "./web:/var/www/html"
       - "./etc/php/php.ini-development:/usr/local/etc/php/php.ini-development"
       - "./etc/php/www.conf:/usr/local/etc/php-fpm.d/www.conf"
+      - "./etc/php/docker-php-ext-xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini"
     networks:
       - magento-network  
   magento_mysql:
